tarpc/tests/compile_fail/tarpc_service_fn_serve.rs
#[tarpc::service]
trait World {
    async fn serve();
}

fn main() {}
