tarpc/tests/compile_fail/tarpc_service_fn_serve.stderr
error: method name conflicts with generated fn `World::serve`
 --> $DIR/tarpc_service_fn_serve.rs:3:14
  |
3 |     async fn serve();
  |              ^^^^^
